Complete Phase 3: Implement train/test split and preprocessing pipeline
- Added sklearn train_test_split and torchvision transforms imports
- Created separate transform pipelines for training (with augmentation) and testing
- Implemented 80/20 train/test split using PyTorch's random_split function
- Added image preprocessing: resizing to 224x224, normalization, and data augmentation
- Applied different transforms to train and test datasets for proper evaluation
- Started CNN architecture design with PeriodontalCNN class structure
- Updated README with Phase 3 completion and technical achievements
- Ready for Phase 4: CNN implementation and training loop

--- a/predict_periodontal_disease_solution.ipynb
+++ b/predict_periodontal_disease_solution.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9ec65fa1",
    "metadata": {},
    "outputs": [
@@ -272,6 +272,8 @@
     "from torch.utils.data import Dataset\n",
     "import torch\n",
     "import numpy as np\n",
+    "from torchvision import transforms\n",
+    "\n",
     "\n",
     "class PeriodontalDataset(Dataset):\n",
     "    def __init__(self, root_dir, transform=None):\n",
@@ -323,14 +325,131 @@
     "        return len(self.image_paths)\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        # Your task: Load image, apply transforms, return (image, label)\n",
-    "        pass\n",
+    "        # Hint: You have image_paths[idx] and labels[idx]\n",
+    "        # How do you load an image from a file path? \n",
+    "        # (Think about what you used earlier in your notebook...) \n",
+    "        image_path = self.image_paths[idx]\n",
+    "        label = self.labels[idx]\n",
+    "\n",
+    "        # Load image \n",
+    "        image = Image.open(image_path)\n",
+    "       \n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "        else:\n",
+    "            # You need a fallback to convert PIL to tensor\n",
+    "            transform = transforms.ToTensor()\n",
+    "            image = transform(image)\n",
+    "        \n",
+    "        return image, label\n",
     "\n",
     "# Test your extended dataset\n",
     "dataset = PeriodontalDataset(\"datasets/images\")\n",
     "print(f\"Total dataset size: {len(dataset)}\")\n",
     "print(f\"Label distribution: {np.bincount(dataset.labels)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70a542ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2303164690.py, line 52)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 52\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m# Calculate accuracy, confusion matrix\u001b[39m\n                                          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from torchvision import transforms\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Split your data into train/test\n",
+    "# Split the image paths and labels\n",
+    "from torch.utils.data import random_split\n",
+    "\n",
+    "# For training: include data augmentation\n",
+    "train_transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),        # Resize to standard size\n",
+    "    transforms.RandomHorizontalFlip(),    # Randomly flip images (augmentation)\n",
+    "    transforms.RandomRotation(10),        # Randomly rotate (augmentation)\n",
+    "    transforms.ToTensor(),                # Convert to tensor\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Normalize\n",
+    "])\n",
+    "\n",
+    "# For testing: no augmentation, just preprocessing\n",
+    "test_transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),        # Resize to same size\n",
+    "    transforms.ToTensor(),                # Convert to tensor\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])  # Same normalization\n",
+    "])\n",
+    "\n",
+    "# Create full dataset without transforms first\n",
+    "full_dataset = PeriodontalDataset(\"datasets/images\", transform=None)\n",
+    "\n",
+    "# Split it\n",
+    "train_size = int(0.8 * len(full_dataset))\n",
+    "test_size = len(full_dataset) - train_size\n",
+    "train_dataset, test_dataset = random_split(full_dataset, [train_size, test_size])\n",
+    "\n",
+    "# Now apply different transforms to each\n",
+    "train_dataset.dataset.transform = train_transform  # Apply training transforms\n",
+    "test_dataset.dataset.transform = test_transform    # Apply testing transforms\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Build a Convolutional Neural Network\n",
+    "# Input: Images (probably resized to 224x224 or 128x128)\n",
+    "# Output: 3 classes (MGI, OHG, PFI)\n",
+    "class PeriodontalCNN(nn.Module):\n",
+    "    def __init__(self, num_classes=3):\n",
+    "        # Your CNN layers go here\n",
+    "        # Hint: Start with Conv2d, then ReLU, then MaxPool2d\n",
+    "        # Convolutional layers\n",
+    "        nn.Conv2d(in_channels, out_channels, kernel_size)\n",
+    "\n",
+    "        # Activation functions\n",
+    "        nn.ReLU()\n",
+    "\n",
+    "        # Pooling layers\n",
+    "        nn.MaxPool2d(kernel_size)\n",
+    "\n",
+    "        # Fully connected layers\n",
+    "        nn.Linear(in_features, out_features)\n",
+    "\n",
+    "        # Dropout for regularization\n",
+    "        nn.Dropout(p=0.5)\n",
+    "        # Repeat this pattern a few times\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "    # Define how data flows through your network\n",
+    "    # Hint: Apply your layers in sequence\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Implement the training process\n",
+    "# Loss function, optimizer, epochs\n",
+    "\n",
+    "# Test your model on unseen data\n",
+    "# Calculate accuracy, confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8901279a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
